--- a/asi-wp-dev/app/wp-content/themes/wp-local-dev-theme/style.css
+++ b/asi-wp-dev/app/wp-content/themes/wp-local-dev-theme/style.css
@@ -1280,6 +1280,8 @@ body.login {
   left: 0;
   right: 0;
   padding: 20px 0;
+  background-color:#000;
+  opacity:.95;
 }
 
 .site-header__avatar {
@@ -1554,7 +1556,7 @@ body.login {
 }
 
 .page-banner {
-  background-color: #000;
+  background-color: #222;
   padding: 80px 0 40px 0;
   position: relative;
 }
